# asserten

./: .gitignore  MORNING_CHECKLIST.md  PROJECT_KNOWLEDGE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: asserten-eval.md  asserten-failures.md  asserten-ingest.md  asserten-optimize-light.md  asserten-run.md  asserten-select.md  asserten.md
client/: __init__.py  api.py  cli.py  format.py  models.py  session.py
commands/: asserten-audit.md  asserten-compare.md  asserten-optimize-deep.md  asserten-reset.md  asserten-status.md
docs/: v0.1-test-report.md
examples/: sample_agent.json
tests/: conftest.py  test_api.py  test_cli.py  test_cmd_optimize_deep.py  test_e2e_smoke.py  test_format.py  test_integration_live.py  test_models.py  test_session.py
